Move list and listRelated methods to reusable TaxonDAO. Return simple names for related, not full usages