@@ -145,17 +145,17 @@ public class NameUsageMapperTest extends MapperTestBase<NameUsageMapper> {
 
   @Test
   public void listRelated() throws Exception {
-    var results = mapper().listRelated(DSID.of(testDataRule.testData.key, "root-2"), null, null);
+    var results = mapper().listRelated(DSID.of(testDataRule.testData.key, "root-2"), null,null, null);
     assertEquals(1, results.size());
-    assertEquals("s1", results.get(0).getId());
+    assertEquals("s1", results.getFirst().getId());
 
-    results = mapper().listRelated(DSID.of(testDataRule.testData.key, "root-2"), List.of(testDataRule.testData.key), null);
+    results = mapper().listRelated(DSID.of(testDataRule.testData.key, "root-2"), null,List.of(testDataRule.testData.key), null);
     assertEquals(1, results.size());
-    assertEquals("s1", results.get(0).getId());
+    assertEquals("s1", results.getFirst().getId());
 
-    assertTrue(mapper().listRelated(DSID.of(testDataRule.testData.key, "root-2"), null, UUID.randomUUID()).isEmpty());
-    assertTrue(mapper().listRelated(DSID.of(testDataRule.testData.key, "root-2"), List.of(1,2,3), UUID.randomUUID()).isEmpty());
-    assertTrue(mapper().listRelated(DSID.of(testDataRule.testData.key, "root-2"), List.of(1,2,3), null).isEmpty());
+    assertTrue(mapper().listRelated(DSID.of(testDataRule.testData.key, "root-2"), null,null, List.of(UUID.randomUUID())).isEmpty());
+    assertTrue(mapper().listRelated(DSID.of(testDataRule.testData.key, "root-2"), null,List.of(1,2,3), List.of(UUID.randomUUID())).isEmpty());
+    assertTrue(mapper().listRelated(DSID.of(testDataRule.testData.key, "root-2"), null,List.of(1,2,3), null).isEmpty());
   }
 
   @Test
